[package]
name = "clara"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
config = { version = "0.15.13", features = ["toml"] }
dirs = "6.0.0"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"

